# UniProjectChess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
include/: Action.h  Bishop.h  BitBoard.h  Bitboard.h  Board.h  King.h  Knight.h  Pawn.h  Piece.h  Piece.hpp  Pieces.h  Queen.h  Rook.h
src/: Bishop.cpp  Bitboard.cpp  Board.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  main.cpp
tests/: BishopTest.cpp  BitboardTest.cpp  BoardTest.cpp  CMakeLists.txt  KingTest.cpp  KnightTest.cpp  PawnTest.cpp  PieceTest.cpp  QueenTest.cpp  RookTest.cpp  input_test_fools_mate.txt  input_testing.sh  test.cpp
tests/input_tests/: blackmar_gambit.txt  fools_mate.txt  rook_exchange.txt
